# titanium-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  PROJECT_BRIEF.md  README.md  SECURITY.md  TECH_STACK.md
.cargo/: config.toml
.github/workflows/: audit.yml  documentation.yml  rust.yml
titanium/: Cargo.toml
titanium-cache/: Cargo.toml
titanium-cache/src/: lib.rs
titanium-gateway/: Cargo.toml
titanium-gateway/examples/: basic_shard.rs  cluster.rs  production.rs
titanium-gateway/src/: cluster.rs  compression.rs  error.rs  etf.rs  event.rs  heartbeat.rs  lib.rs  metrics.rs  opcode.rs  parsing.rs  payload.rs  ratelimit.rs  shard.rs
titanium-http/: Cargo.toml
titanium-http/src/: audit_log.rs  automod.rs  channel.rs  client.rs  emoji.rs  error.rs  guild.rs  interaction.rs  lib.rs  monetization.rs  ratelimit.rs  routes.rs  soundboard.rs  webhook.rs
titanium-model/: Cargo.toml
titanium-model/src/: audit.rs  automod.rs  builder.rs  cdn_tests.rs  channel.rs  command.rs  component.rs  create_message.rs  file.rs  guild.rs  integration.rs  intents.rs  interaction.rs  invite.rs  json.rs  lib.rs  member.rs  message.rs  monetization.rs  permissions.rs  poll.rs  reaction.rs  scheduled.rs  snowflake.rs  soundboard.rs  stage.rs  string.rs  thread.rs  ui.rs  user.rs  voice.rs  voice_state.rs
titanium-model/src/builder/: automod.rs  channel.rs  command.rs  component.rs  embed.rs  emoji.rs  guild.rs  interaction.rs  invite.rs  member.rs  message.rs  mod.rs  poll.rs  role.rs  scheduled.rs  stage.rs  sticker.rs  thread.rs  webhook.rs
titanium-voice/: Cargo.toml  README.md
titanium-voice/src/: connection.rs  crypto.rs  error.rs  lib.rs  opcode.rs  payload.rs  udp.rs  ws.rs
titanium/benches/: benchmarks.rs
titanium/examples/: basic_bot.rs  components.rs  embeds_bot.rs  modals.rs  ping_bot.rs  reactions.rs  slash_commands.rs  threads.rs  voice_receive.rs
titanium/src/: client.rs  collector.rs  context.rs  error.rs  framework.rs  lib.rs  prelude.rs
