[package]
name = "titanium-http"
description = "Discord REST API client for Titan"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
titanium-model = { path = "../titanium-model" }

# Async runtime
tokio = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
simd-json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Utilities
tracing = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
