[package]
name = "titanium-rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "The ultimate high-performance Discord API framework for Rust"




[dependencies]
titanium-gateway = { path = "../titanium-gateway", version = "0.1.0" }
titanium-http = { path = "../titanium-http", version = "0.1.0" }
titanium-model = { path = "../titanium-model", version = "0.1.0" }
titanium-cache = { path = "../titanium-cache", version = "0.1.0" }
titanium-voice = { path = "../titanium-voice", version = "0.1.0" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
thiserror = { workspace = true }
dashmap = { workspace = true }
flume = { workspace = true }
ahash = { workspace = true }
reqwest = { workspace = true }
mimalloc = { workspace = true, optional = true }

[features]
default = []
# Enable high-performance mimalloc allocator
performance = ["dep:mimalloc"]

[dev-dependencies]
tracing-subscriber = { workspace = true }
